@@ -6,6 +6,12 @@ Getting a new upstream version
 
 todo
 
+Known local fixes which need to be merged:
+- fixes in skins/tinymce/tiny_mce_src.js
+- fixes in skins/tinymce/plugins/paste/pastetext.html.pt and
+  skins/tinymce/plugins/paste/js/pastetext.js
+- others?
+
 Refreshing translation files
 ----------------------------
 
